2003-07-19  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c: remove all occurances of push/pop_span, use the
	element interface directly.  Start work on new element interface.

	* htmlstyle.c (html_style_set_font_size): make sure to mask the
	whole size when setting the size.

2003-07-17  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_p): still push the element if avoid para is
	true since we want to pick up alignment changes etc.

2003-07-16  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_color): no longer zero fill to match
	mozilla, opera etc.
	(current_row_align): add hack to get the current row alignment.
	(parse_t): use current_row_align in th and td.  Also on't
	explicitly override the aligment in td.

	* htmlstyle.c (parse_color): no longer zero fill because mozilla
	doesn't (netscape did).

	* htmlengine.c: big refactoring of the parser logic, makes table
	parse incremental and moves a bunch of the logic into the style
	code.  Needs more work to make it clean but I want it in CVS now.

	* htmlengine.h: add and remove some members for the new parser.

2003-07-15  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (alloc_font): fallback to 1st available font only
	when default fonts aren't available

2003-07-15  Yuedong Du  <yuedong.du>

	* gtkhtml.c: (set_caret_mode): stop blinking cursor if turn the caret
	mode off. 
	(style_set): according to Larry's suggestion, do not widget
	style to implement caret mode.
	(gtk_html_class_init): ditto.
	(gtk_html_set_caret_mode), (gtk_html_get_caret_mode): new function
	to get/set the caret mode flag.

	* gtkhtml.h: declaration of the new function, and remove duplicate
	declaration of declaration.

2003-07-10  Larry Ewing  <lewing@ximian.com>

	* htmldrawqueue.c: remove unused function.

	* htmlengine-edit-cursor.c (clip_cursor): rename and do a little
	cleanup.

2003-07-10  Yuedong Du  <yuedong.du@sun.com>

	* gtkhtml.c (set_caret_mode): new function to enable caret mode.