@@ -1,3 +1,8 @@
+2003-07-20  Larry Ewing  <lewing@ximian.com>
+
+	* htmlengine.c (pop_element): move everything to using the pop
+	element, makr pop_block a special case of the pop_element code.
+
 2003-07-19  Larry Ewing  <lewing@ximian.com>
 
 	* htmlengine.c: remove all occurances of push/pop_span, use the
